fix alignment faq component mobile layout

--- a/faq-accordion-card-main/style.css
+++ b/faq-accordion-card-main/style.css
@@ -50,6 +50,10 @@ main {
 .faq {
     width: 100vw;
     height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .faq-card {
@@ -143,11 +147,6 @@ main {
 
 
 @media screen and (min-width: 59.3125em) {
-    .faq {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-    }
 
     .faq-card {
         display: grid;
